Closed
Bug 232321
Opened 21 years ago
Closed 21 years ago
Control-backspace doesn't delete words in URL bar
Categories
(SeaMonkey :: Location Bar, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: jlquinn, Unassigned)
Details
Attachments
(1 file, 2 obsolete files)
3.85 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5a) Gecko/20030922 Mozilla Firebird/0.6.1
In the URL bar, control-delete erases the whole URL that's been typed so far.
It's non-intuitive and very irritating. See galeon for a great example of how I
think it should work.
Bug 98546 seems related.
This issue is present in Firebird, and recent versions of Mozilla. I can't
easily track down the last mozilla that works correctly.
Reproducible: Always
Steps to Reproduce:
1.Type a URL such as "http://bugzilla.mozilla.org/enter_bug.cgi?product=Browser"
2. Hit Control-Delete
3.
Actual Results:
The URL bar clears.
Expected Results:
The word "Browser" should be deleted.
Comment 1•21 years ago
|
||
so ctrl+delete should delete the word before the cursor?
Assignee: general → location-bar
Component: Browser-General → Location Bar
Comment 2•21 years ago
|
||
First, you're using an old Alpha build, did you try this with Mozilla v1.6 Final?
Where did you place the caret before pressing Ctrl+Delete? if it's at the end of
the typed URL, then Ctrl+Backspace should delete the word "Browser", not
Ctrl+Delete.
Prog.
Comment 3•21 years ago
|
||
If you have text selected then Ctrl+Delete should delete it by preference
(although currently it doesn't get that quite right...)
Reporter | ||
Comment 4•21 years ago
|
||
(In reply to comment #2)
> First, you're using an old Alpha build, did you try this with Mozilla v1.6 Final?
No, I've been using what's available on Debian. I'm updating to firebird 0.7
right now to try there.
> Where did you place the caret before pressing Ctrl+Delete? if it's at the end of
> the typed URL, then Ctrl+Backspace should delete the word "Browser", not
> Ctrl+Delete.
Sorry. Yes, I meant Ctrl+Backspace, not Ctrl+Delete. Summary is now updated.
I'm not selecting text with the mouse, I'm just editing in the location bar.
Summary: Control-delete doesn't delete words in URL bar → Control-backspace doesn't delete words in URL bar
Reporter | ||
Comment 5•21 years ago
|
||
(In reply to comment #4)
> (In reply to comment #2)
> > First, you're using an old Alpha build, did you try this with Mozilla v1.6
Final?
>
> No, I've been using what's available on Debian. I'm updating to firebird 0.7
> right now to try there.
Firebird 0.7 has the same problem.
Comment 6•21 years ago
|
||
WFM, Gecko/20040207 Firebird/0.8.0+, Windows XP
Comment 7•21 years ago
|
||
On Linux, word motion only stops at whitespace, but on Windows, it stops at
punctuation. While there is a preference that controls this, it only works if
you edit the default preference file "all.js" ("unix.js" on older versions).
Comment 8•21 years ago
|
||
Comment 9•21 years ago
|
||
Comment on attachment 140950 [details] [diff] [review]
Make word break pref work
I basically copied code from nsImageFrame.cpp ;-)
Attachment #140950 -
Flags: superreview?(bzbarsky)
Attachment #140950 -
Flags: review?(bzbarsky)
![]() |
||
Comment 10•21 years ago
|
||
Comment on attachment 140950 [details] [diff] [review]
Make word break pref work
Hmm... So the code in nsImageFrame has a problem, actually -- it's passing an
object with a refcount of 0 across xpcom boundaries. So is this code.
Attachment #140950 -
Flags: superreview?(bzbarsky)
Attachment #140950 -
Flags: superreview-
Attachment #140950 -
Flags: review?(bzbarsky)
Attachment #140950 -
Flags: review-
Reporter | ||
Comment 11•21 years ago
|
||
(In reply to comment #7)
> On Linux, word motion only stops at whitespace, but on Windows, it stops at
> punctuation. While there is a preference that controls this, it only works if
> you edit the default preference file "all.js" ("unix.js" on older versions).
Even if this behavior is controllable through a preference, I'd argue that the
default is set wrong and should be set to punctuation boundaries. Whitespace
boundaries are next to useless for URL editing.
Comment 12•21 years ago
|
||
Attachment #140950 -
Attachment is obsolete: true
Comment 13•21 years ago
|
||
Comment on attachment 140982 [details] [diff] [review]
Addressed review comment
No ref counts, does this make things better?
Attachment #140982 -
Flags: superreview?(bzbarsky)
Attachment #140982 -
Flags: review?(bzbarsky)
![]() |
||
Comment 14•21 years ago
|
||
Comment on attachment 140982 [details] [diff] [review]
Addressed review comment
Um... but how do you clean up that object now?
What this should really do is to observe shutdown like nsImageFrame does and
release the pointer at that point....
Comment 15•21 years ago
|
||
Attachment #140982 -
Attachment is obsolete: true
Comment 16•21 years ago
|
||
Comment on attachment 141174 [details] [diff] [review]
Another try
I think I managed to kill a semicolon too.
Attachment #141174 -
Flags: superreview?(bzbarsky)
Attachment #141174 -
Flags: review?(bzbarsky)
![]() |
||
Updated•21 years ago
|
Attachment #140982 -
Flags: superreview?(bzbarsky)
Attachment #140982 -
Flags: superreview-
Attachment #140982 -
Flags: review?(bzbarsky)
Attachment #140982 -
Flags: review-
![]() |
||
Comment 17•21 years ago
|
||
Comment on attachment 141174 [details] [diff] [review]
Another try
There we go. r+sr=bzbarsky
Attachment #141174 -
Flags: superreview?(bzbarsky)
Attachment #141174 -
Flags: superreview+
Attachment #141174 -
Flags: review?(bzbarsky)
Attachment #141174 -
Flags: review+
Comment 18•21 years ago
|
||
Fix checked in.
Comment 19•21 years ago
|
||
This is fixed, right? I'm marking it as such, and I'll also dupe bug 193025 to this.
(In reply to Jerry Quinn's comment #11)
> Even if this behavior is controllable through a preference, I'd argue that the
> default is set wrong and should be set to punctuation boundaries. Whitespace
> boundaries are next to useless for URL editing.
I totally agree, but that's the subject of bug 190615, and it doesn't seem
likely to be resolved to our liking.
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 20•21 years ago
|
||
*** Bug 193025 has been marked as a duplicate of this bug. ***
Reporter | ||
Comment 21•21 years ago
|
||
I just tried mozilla 1.7b and control-backspace still wipes the whole URL bar.
Status: RESOLVED → UNCONFIRMED
Resolution: FIXED → ---
Comment 22•21 years ago
|
||
Jerry, sorry for not making things clear...
open about:config
filter for stop_at
change layout.word_select.stop_at_punctuation to true
Hopefully this fixes your problem.
Reporter | ||
Comment 23•21 years ago
|
||
That's easier than editing prefs.js. Thanks.
Yes, it does make the behavior work the way it should. Now to convince the
powers that be that this is the way it should work out of the box...
Any chance that about:config is documented somewhere?
Comment 24•21 years ago
|
||
Marking fixed again, because the default pref issue is bug 190615.
What sort of documentation for about:config were you looking for?
Status: UNCONFIRMED → RESOLVED
Closed: 21 years ago → 21 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 25•21 years ago
|
||
(In reply to comment #24)
> What sort of documentation for about:config were you looking for?
That it exists? What it allows you to do, etc. I just searched the included
help and found nothing about it at all.
Comment 26•21 years ago
|
||
about:config wasn't designed as a user tool. It's a bit like regedit.exe in that
respect; although Microsoft now includes help on using it, you still have to
find out for yourself what all the names and values mean. People have created
web pages such as http://mozillazine.org/misc/about:config/ on the use of
about:config although there are extensions available that make it easier to
alter commonly used preferences that aren't listed in the preferences dialog.
Updated•17 years ago
|
Product: Core → SeaMonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•