Bug 232321 Make layout.word_select.stop_at_punctuation work as a user preference r/sr=bz